# geant4-exgps

cpp-histogrammer/: CMakeLists.txt  README.txt  main.cpp  makehist.cpp  makehist.h  qglobal_part.h  qpoint.cpp  qpoint.h  xydata_template.h
egamma-ta-al-in/: big_run.mac  e-gamma.cc  input_mod.txt
egamma-ta-al-in/old-simple-egamma-0.0.1a/: vis.mac
egamma-ta-al-in/old-simple-egamma-0.0.pre1/: e-gamma.cc
egamma-ta-al-in/scripts/: finout.py  fitexpr.py  mpfit.py  schiff.py  schiff_from_scratch.py
egamma-ta-al-in/src/: DetectorConstruction.cc  SteppingAction.cc
exgps/: CMakeLists.txt  GNUmakefile  README.txt  exgps.cc  vis.mac
exgps/include/: DetectorConstruction.hh  DetectorConstructionMessenger.hh  DetectorConstructionMessenger.hh~  DetectorSD2.hh  EventAction.hh  RunAction.hh  SteppingAction.hh  g4solid_object.h  geom_objects.h  quick_geom.hh
exgps/src/: DetectorConstruction.cc  DetectorConstructionMessenger.cc  DetectorConstructionMessenger.cc~  DetectorSD2.cc  EventAction.cc  Hist1i.cc  PrimaryGeneratorAction.cc  StackingAction.cc  quick_geom.cc
geant4-gs2019hpge/: GNUmakefile  run_elctrons.mac  vis.mac
geant4-gs2019hpge/1173.22_kev__30e06events/: run.mac
geant4-gs2019hpge/1332.49_kev__30e06events/: g4_00.wrl  spectrum.txt  vis_vrml.mac
geant4-gs2019hpge/include/: DetectorConstruction.hh  g4solid_object.h
geant4-gs2019hpge/src/: DetectorConstruction.cc  DetectorSD.cc  Hist1i.cc  RunAction.cc  quick_geom.cc
other/egamma-ta-al-in/: CMakeLists.txt  g4conf.sh  g5conf.sh  input.txt  run.mac  vis.mac
other/geant4-gs2019hpge/: CMakeLists.txt  log.txt  (+2 more)
(+46 files in other folders)
